fixed some alignment issues

--- a/style.css
+++ b/style.css
@@ -68,3 +68,9 @@ table {
     width:25%;
 
 }
+#footer {
+    margin-bottom: 10px;
+    margin-top: 10px;
+    padding-bottom: 10px;
+    padding-top: 10px;
+}
